WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34390
Limit the scope of packing alignment to avoid MSVC C4103 warning.
https://bugs.webkit.org/show_bug.cgi?id=34390
Summary
Limit the scope of packing alignment to avoid MSVC C4103 warning.
Kwang Yul Seo
Reported
2010-01-31 02:27:52 PST
Limit the scope of packing alignment with pack(push) and pack(pop) to avoid C4103. C4103: alignment changed after including header.
Attachments
Patch
(2.32 KB, patch)
2010-01-31 02:32 PST
,
Kwang Yul Seo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2010-01-31 02:32:18 PST
Created
attachment 47788
[details]
Patch
Kwang Yul Seo
Comment 2
2010-01-31 05:38:13 PST
CC'ing
aroben@apple.com
who added #pragma pack(16) in
http://trac.webkit.org/changeset/35684
WebKit Commit Bot
Comment 3
2010-01-31 18:37:56 PST
Comment on
attachment 47788
[details]
Patch Clearing flags on attachment: 47788 Committed
r54122
: <
http://trac.webkit.org/changeset/54122
>
WebKit Commit Bot
Comment 4
2010-01-31 18:38:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug