2010-01-31  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Darin Adler.

        Limit the scope of packing alignment to avoid MSVC C4103 warning.
        https://bugs.webkit.org/show_bug.cgi?id=34390

        Use pack(push, 16) and pack(pop) to limit the scope of packing
        alignment change.

        * bindings/js/JSSVGPODTypeWrapper.h:

Canonical link: https://commits.webkit.org/45488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54122 268f45cc-cd09-0410-ab3c-d52691b4dbfc